Avoid double border for bottom panel

--- a/styles/panels.less
+++ b/styles/panels.less
@@ -22,7 +22,7 @@ atom-panel {
     border-left: 1px solid @base-border-color;
   }
   &.bottom {
-    border-right: 1px solid @base-border-color;
+    border-right: none;
   }
   &.footer:last-child {
     border-bottom: none;
